# openapi/openapi.yml
@@ -2274,6 +2274,64 @@ paths:
           $ref: '#/components/responses/Error'
       tags:
         - SSH Public Key
+  '/project/{project_id}/token/jwt-issuer':
+    parameters:
+      - $ref: '#/components/parameters/project_id'
+    get:
+      operationId: listTrustedJwtIssuers
+      summary: List all trusted JWT issuers
+      responses:
+        '200':
+          $ref: '#/components/responses/TrustedJwtIssuers'
+        default:
+          $ref: '#/components/responses/Error'
+      tags:
+        - Trusted JWT Issuer
+    post:
+      operationId: createTrustedJwtIssuer
+      summary: Create a trusted JWT issuer
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/TrustedJwtIssuerCreate'
+      responses:
+        '200':
+          $ref: '#/components/responses/TrustedJwtIssuer'
+        default:
+          $ref: '#/components/responses/Error'
+      tags:
+        - Trusted JWT Issuer
+  '/project/{project_id}/token/jwt-issuer/{trusted_jwt_issuer_id}':
+    parameters:
+      - $ref: '#/components/parameters/project_id'
+      - name: trusted_jwt_issuer_id
+        in: path
+        required: true
+        schema:
+          type: string
+          pattern: '^jw[0-9a-hj-km-np-tv-z]{24}$'
+    get:
+      operationId: getTrustedJwtIssuer
+      summary: Get trusted JWT issuer details
+      responses:
+        '200':
+          $ref: '#/components/responses/TrustedJwtIssuer'
+        default:
+          $ref: '#/components/responses/Error'
+      tags:
+        - Trusted JWT Issuer
+    delete:
+      operationId: deleteTrustedJwtIssuer
+      summary: Delete a trusted JWT issuer
+      responses:
+        '204':
+          $ref: '#/components/responses/Delete'
+        default:
+          $ref: '#/components/responses/Error'
+      tags:
+        - Trusted JWT Issuer
   '/project/{project_id}/vm':
     get:
       operationId: listProjectVMs
@@ -2608,6 +2666,43 @@ components:
       required:
         - pg_config
         - pgbouncer_config
+    TrustedJwtIssuerCreate:
+      type: object
+      properties:
+        name:
+          type: string
+        issuer:
+          type: string
+        jwks_uri:
+          type: string
+      additionalProperties: false
+      required:
+        - name
+        - issuer
+        - jwks_uri
+    TrustedJwtIssuer:
+      type: object
+      properties:
+        id:
+          description: ID of the trusted JWT issuer
+          type: string
+          example: jwaz0q3vbrpa7pkg7zbmah9csn
+          pattern: '^jw[0-9a-hj-km-np-tv-z]{24}$'
+        name:
+          description: Name of the trusted JWT issuer
+          type: string
+        issuer:
+          description: Expected iss claim value
+          type: string
+        jwks_uri:
+          description: JWKS endpoint URI
+          type: string
+      additionalProperties: false
+      required:
+        - id
+        - name
+        - issuer
+        - jwks_uri
     SshPublicKeyCreate:
       type: object
       properties:
@@ -3655,6 +3750,26 @@ components:
             required:
               - count
               - items
+    TrustedJwtIssuer:
+      description: A trusted JWT issuer
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/TrustedJwtIssuer'
+    TrustedJwtIssuers:
+      description: A list of trusted JWT issuers
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              items:
+                type: array
+                items:
+                  $ref: '#/components/schemas/TrustedJwtIssuer'
+            additionalProperties: false
+            required:
+              - items
     SshPublicKey:
       description: An SSH Public Key
       content:
@@ -4123,6 +4238,8 @@ tags:
     name: Kubernetes Cluster
   - description: SSH Public Key Operations
     name: SSH Public Key
+  - description: Trusted JWT Issuer Operations
+    name: Trusted JWT Issuer
   - description: GitHub Operations
     name: GitHub
   - description: Audit Log Operations
